# translate-scripts

./: README.md  pyproject.toml
src/: subtitle.py  transcribe.py  translate.py  translate_srt.py
