[project]
name = "translate-scripts"
version = "0.1.0"
description = "AI-powered translation script samples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20240930",
    "python-dotenv>=1.0.1",
    "sentencepiece>=0.2.0",
    "srt>=3.5.3",
    "transformers>=4.48.3",
]
